--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
           <h2 class="section-title visually-hidden">Our Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
+              <svg class="icon" width="64px" height="64px">
+                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+              </svg>
               <h3 class="benefits-list-title">Strategy</h3>
               <p class="benefits-list-text">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +81,9 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <svg class="icon" width="64px" height="64px">
+                <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+              </svg>
               <h3 class="benefits-list-title">Punctuality</h3>
               <p class="benefits-list-text">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +91,9 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <svg class="icon" width="64px" height="64px">
+                <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+              </svg>
               <h3 class="benefits-list-title">Diligence</h3>
               <p class="benefits-list-text">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +101,9 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <svg class="icon" width="64px" height="64px">
+                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+              </svg>
               <h3 class="benefits-list-title">Technologies</h3>
               <p class="benefits-list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -117,7 +129,19 @@
               />
               <div class="team-member-card">
                 <h3 class="team-member-name">Mark Guerrero</h3>
-              <p class="team-member-description">Product Designer</p>
+                <p class="team-member-description">Product Designer</p>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
               </div>
             </li>
             <li class="team-member-item">
@@ -130,7 +154,19 @@
               />
               <div class="team-member-card">
                 <h3 class="team-member-name">Tom Ford</h3>
-              <p class="team-member-description">Frontend Developer</p>
+                <p class="team-member-description">Frontend Developer</p>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
               </div>
             </li>
             <li class="team-member-item">
@@ -143,7 +179,19 @@
               />
               <div class="team-member-card">
                 <h3 class="team-member-name">Camila Garcia</h3>
-              <p class="team-member-description">Marketing</p>
+                <p class="team-member-description">Marketing</p>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
               </div>
             </li>
             <li class="team-member-item">
@@ -156,7 +204,19 @@
               />
               <div class="team-member-card">
                 <h3 class="team-member-name">Daniel Wilson</h3>
-              <p class="team-member-description">UI Designer</p>
+                <p class="team-member-description">UI Designer</p>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
               </div>
             </li>
           </ul>
@@ -253,14 +313,29 @@
     </main>
     <!-- OPEN FOOTER -->
     <footer class="page-footer">
-      <div class="container">
-          <a class="footer-logo" href="./index.html"
-            >Web<span class="footer-color-logo">Studio</span></a
-          >
-          <p class="page-footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+      <div class="container footer-container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-color-logo">Studio</span></a
+        >
+        <p class="page-footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+        <div class="footer-social-media">
+          <p>Social media</p>
+          <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+                <svg class="icon" width="16px" height="16px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
+        </div>
       </div>
     </footer>
     <!-- CLOSE FOOTER -->
