--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           digital marketing & growth solutions.
         </p>
         <div class="footer-social-media">
-          <p>Social media</p>
+          <p class="page-footer-text">Social media</p>
           <svg class="icon" width="16px" height="16px">
                   <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                 </svg>
