--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
           <h2 class="section-title visually-hidden">Our Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
-              <svg class="icon" width="64px" height="64px">
-                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
-              </svg>
+              <div class="icon-box">
+                <svg class="benefits-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Strategy</h3>
               <p class="benefits-list-text">
                 Our goal is to identify the business problem to walk away with
@@ -81,9 +83,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
-              <svg class="icon" width="64px" height="64px">
-                <use href="./images/symbol-defs.svg#icon-clock-1"></use>
-              </svg>
+              <div class="icon-box">
+                <svg class="benefits-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Punctuality</h3>
               <p class="benefits-list-text">
                 Bring the key message to the brand's audience for the best price
@@ -91,9 +95,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
-              <svg class="icon" width="64px" height="64px">
-                <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
-              </svg>
+              <div class="icon-box">
+                <svg class="benefits-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Diligence</h3>
               <p class="benefits-list-text">
                 Research and confirm brands that present the strongest digital
@@ -101,9 +107,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
-              <svg class="icon" width="64px" height="64px">
-                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
-              </svg>
+              <div class="icon-box">
+                <svg class="benefits-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Technologies</h3>
               <p class="benefits-list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -130,18 +138,36 @@
               <div class="team-member-card">
                 <h3 class="team-member-name">Mark Guerrero</h3>
                 <p class="team-member-description">Product Designer</p>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-                </svg>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member-item">
@@ -155,18 +181,36 @@
               <div class="team-member-card">
                 <h3 class="team-member-name">Tom Ford</h3>
                 <p class="team-member-description">Frontend Developer</p>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-                </svg>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member-item">
@@ -180,18 +224,36 @@
               <div class="team-member-card">
                 <h3 class="team-member-name">Camila Garcia</h3>
                 <p class="team-member-description">Marketing</p>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-                </svg>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member-item">
@@ -205,18 +267,36 @@
               <div class="team-member-card">
                 <h3 class="team-member-name">Daniel Wilson</h3>
                 <p class="team-member-description">UI Designer</p>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                </svg>
-                <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-                </svg>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -315,26 +395,44 @@
     <footer class="page-footer">
       <div class="container footer-container">
         <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-color-logo">Studio</span></a
-        >
+          >Web<span class="footer-color-logo">Studio</span>
+        </a>
         <p class="page-footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
         <div class="footer-social-media">
           <p class="page-footer-text">Social media</p>
-          <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
-                </svg>
+          <ul class="footer-media-list">
+            <li class="footer-media-item">
+              <a class="footer-media-link" href="#">
                 <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
+              </a>
+            </li>
+            <li class="footer-media-item">
+              <a class="footer-media-link" href="#"
+                ><svg class="icon" width="16px" height="16px">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-item">
+              <a class="footer-media-link" href="#">
                 <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
+              </a>
+            </li>
+            <li class="footer-media-item">
+              <a class="footer-media-link" href="#">
                 <svg class="icon" width="16px" height="16px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-                </svg>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
