--- a/index.html
+++ b/index.html
@@ -309,78 +309,120 @@
           <h2 class="section-title portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="porfolio-list-item">
-              <img
-                class="portfolio-list-image"
-                src="./images/portfolio/banking-app.jpg"
-                width="360"
-                height="300"
-                alt="Banking App"
-              />
+              <div class="portfolio-image">
+                <img
+                  class="portfolio-list-image"
+                  src="./images/portfolio/banking-app.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <div class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
+              <div class="portfolio-image">
+                <img
                 class="portfolio-list-image"
                 src="./images/portfolio/cashless-payment.jpg"
                 width="360"
                 height="300"
                 alt="Cashless Payment"
               />
+                 <div class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
+              <div class="portfolio-image">
+                <img
                 class="portfolio-list-image"
                 src="./images/portfolio/meditation-app.jpg"
                 width="360"
                 height="300"
                 alt="Meditation App"
               />
+              <div class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
+              <div class="portfolio-image">
+                <img
                 class="portfolio-list-image"
                 src="./images/portfolio/taxi-service.jpg"
                 width="360"
                 height="300"
                 alt="Taxi Service"
               />
+              <div class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
+              <div class="portfolio-image">
+                <img
                 class="portfolio-list-image"
                 src="./images/portfolio/screen-illustrations.jpg"
                 width="360"
                 height="300"
                 alt="Screen Illustrations"
               />
+              <div class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
+              <div class="portfolio-image">
+                 <img
                 class="portfolio-list-image"
                 src="./images/portfolio/online-courses.jpg"
                 width="360"
                 height="300"
                 alt="Online Courses"
               />
+              <div class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -394,13 +436,15 @@
     <!-- OPEN FOOTER -->
     <footer class="page-footer">
       <div class="container footer-container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-color-logo">Studio</span>
-        </a>
-        <p class="page-footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-logo-box">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-color-logo">Studio</span>
+          </a>
+          <p class="page-footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
         <div class="footer-social-media">
           <p class="page-footer-text">Social media</p>
           <ul class="footer-media-list">
@@ -429,8 +473,8 @@
               <a class="footer-media-link" href="#">
                 <svg class="icon" width="16px" height="16px">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
