--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="menu">
             <li class="menu-item">
-              <a class="menu-link" href="./index.html">Studio</a>
+              <a class="menu-link current" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link" href="">Portfolio</a>
@@ -141,28 +141,28 @@
                 <ul class="social-list">
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="64px" height="64px">
+                      <svg class="icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="64px" height="64px">
+                      <svg class="icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="64px" height="64px">
+                      <svg class="icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="64px" height="64px">
+                      <svg class="icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -317,11 +317,11 @@
                   height="300"
                   alt="Banking App"
                 />
-                <div class="portfolio-overlay">
+                <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Banking App</h3>
@@ -337,11 +337,11 @@
                 height="300"
                 alt="Cashless Payment"
               />
-                 <div class="portfolio-overlay">
+                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
@@ -357,11 +357,11 @@
                 height="300"
                 alt="Meditation App"
               />
-              <div class="portfolio-overlay">
+              <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Meditation App</h3>
@@ -377,11 +377,11 @@
                 height="300"
                 alt="Taxi Service"
               />
-              <div class="portfolio-overlay">
+              <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
@@ -397,11 +397,11 @@
                 height="300"
                 alt="Screen Illustrations"
               />
-              <div class="portfolio-overlay">
+              <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
@@ -417,11 +417,11 @@
                 height="300"
                 alt="Online Courses"
               />
-              <div class="portfolio-overlay">
+              <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-item-title">Online Courses</h3>
@@ -446,32 +446,32 @@
           </p>
         </div>
         <div class="footer-social-media">
-          <p class="page-footer-text">Social media</p>
+          <p class="page-footer-social-text">Social media</p>
           <ul class="footer-media-list">
             <li class="footer-media-item">
               <a class="footer-media-link" href="#">
-                <svg class="icon" width="16px" height="16px">
+                <svg class="footer-icon" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="#"
-                ><svg class="icon" width="16px" height="16px">
+                ><svg class="footer-icon" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="#">
-                <svg class="icon" width="16px" height="16px">
+                <svg class="footer-icon" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="#">
-                <svg class="icon" width="16px" height="16px">
+                <svg class="footer-icon" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
