--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul class="benefits-list">
             <li class="benefits-list-item">
               <div class="icon-box">
-                <svg class="benefits-icon" width="64px" height="64px">
+                <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -84,7 +84,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="icon-box">
-                <svg class="benefits-icon" width="64px" height="64px">
+                <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
@@ -96,7 +96,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="icon-box">
-                <svg class="benefits-icon" width="64px" height="64px">
+                <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
@@ -108,7 +108,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="icon-box">
-                <svg class="benefits-icon" width="64px" height="64px">
+                <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
@@ -141,28 +141,28 @@
                 <ul class="social-list">
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -184,28 +184,28 @@
                 <ul class="social-list">
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -227,28 +227,28 @@
                 <ul class="social-list">
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -270,28 +270,28 @@
                 <ul class="social-list">
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="">
-                      <svg class="icon" width="16px" height="16px">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -450,28 +450,28 @@
           <ul class="footer-media-list">
             <li class="footer-media-item">
               <a class="footer-media-link" href="#">
-                <svg class="footer-icon" width="24px" height="24px">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="#"
-                ><svg class="footer-icon" width="24px" height="24px">
+                ><svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="#">
-                <svg class="footer-icon" width="24px" height="24px">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="#">
-                <svg class="footer-icon" width="24px" height="24px">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
